--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <a class="nav-link text-dark"href="#contact">Contact us</a>
     </li>
     </ul>
-    </div>image.png
+    </div>
     </nav>
 
 
